# yolo_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: cuda_darknet.cmake
include/yolo_ros/: yolo.h
launch/: realsense_yolo.launch  start_yolo.launch  usb_cam_yolo.launch  yolo.launch
msg/: DetectObject.msg  DetectObjectArray.msg
src/: yolo_node.cpp
